Use one Writer for Each NDJSON File